fix: adjust alignment for server time section in mobile drawer

--- a/packages/components/src/components/mobile-drawer/mobile-drawer.scss
+++ b/packages/components/src/components/mobile-drawer/mobile-drawer.scss
@@ -268,7 +268,6 @@
         padding: 0 1.6rem;
 
         &--servertime {
-            justify-content: start;
             align-items: center;
             border-top: 1px solid var(--color-surface-border);
             color: var(--color-text-primary);
